<resources>
    <string name="app_name">Disabled people</string>
    <string name="title_home">Для волонтёров</string>
    <string name="title_dashboard">Для инвалидов</string>
    <string name="title_notifications">Карта</string>
    <string name="User_name">Ваше имя</string>
    <string name="Task_name">Название заявки</string>
    <string name="Task_description">Описание заявки</string>
    <string name="Task_region">Регион выполнения</string>
    <string name="Warning">Заполните все поля!</string>
    <string name="Send_application">Отправить заявку</string>
    <string name="Reg_a_user">Зарегестрироваться</string>
    <string name="Update_a_user">Обновить профиль</string>
    <string name="Auth_a_user">Войти</string>
    <string name="Create_application">Создать заявку</string>
    <string name="Creating_application">Создание заявки</string>
    <string name="Upadate_applications">Обновить список заявок</string>
    <string name="Show_applications">Посмотреть актуальные заявки</string>
    <string name="title_activity_show_applications">Показ заявок</string>
    <string name="reg_user">Зарегестрироваться</string>
    <string name="auth_user">Аутентифицироваться</string>
    <string name="update_user">Обновить профиль</string>
    <string name="reg_user_activity">Регистрация</string>
    <string name="auth_user_activity">Аутентификация</string>
    <string name="update_user_activity">Изменение профиля</string>
    <string name="name">Имя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="age">Возраст</string>
    <string name="account_type">Тип аккаунта("волонтер" или "заказчик")</string>
    <string-array name="for_recycler_view_test">
        <item>kek1</item>
        <item>kek2</item>
        <item>kek3</item>
        <item>kek4</item>
        <item>kek5</item>
        <item>kek6</item>
        <item>kek7</item>
        <item>kek8</item>
        <item>kek9</item>
        <item>kek10</item>
    </string-array>
</resources>