<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registerActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/name_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/login_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/password_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/email_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/age"
        app:layout_constraintEnd_toStartOf="@+id/age_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="84dp"
        android:autoText="false"
        android:text="@string/account_type"
        app:layout_constraintEnd_toStartOf="@+id/age_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_reg" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_reg" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <EditText
        android:id="@+id/age_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <EditText
        android:id="@+id/account_type_reg"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_reg" />

    <TextView
        android:id="@+id/warningTextReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Warning"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendUserRegistrationInfo"
        android:text="@string/Reg_a_user"
        app:layout_constraintBottom_toTopOf="@+id/warningTextReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

</androidx.constraintlayout.widget.ConstraintLayout>